# rusty-container-sentinel

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: docker.rs  main.rs  routes.rs
static/: index.html  script.js
